hard-gists/1290744/run.log
=== Docker Run Log for 1290744 ===
Started at: Mi 29. Okt 12:05:31 CET 2025

[2025-10-29 12:05:31] START: Running container for 1290744
[2025-10-29 12:05:32] SUCCESS: Container 0171e9ba942cb9040389f276657974b01bf3386fbb5c0614bc2b7d3aa6ae85e7 started for 1290744
=== Container logs for 1290744 ===
  File "/snippet.py", line 48
    except getopt.GetoptError, err:
           ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1290744 ===
[2025-10-29 12:05:34] INFO: Container 0171e9ba942cb9040389f276657974b01bf3386fbb5c0614bc2b7d3aa6ae85e7 has stopped
